--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "build": "tsc && pkg . --out-path dist",
+    "build": "rm -rf dist/ && tsc && npx gulp",
+    "build:pkg": "pkg . --out-path dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,10 +15,15 @@
   "dependencies": {
     "commander": "^12.1.0",
     "inquirer": "^12.2.0",
-    "picocolors": "^1.1.1"
+    "ora": "^8.1.1",
+    "picocolors": "^1.1.1",
+    "typescript": "^5.7.2"
   },
   "devDependencies": {
+    "@types/commander": "^2.12.5",
     "@types/node": "^22.10.2",
+    "gulp": "^5.0.0",
+    "gulp-shell": "^0.8.0",
     "pkg": "^5.8.1"
   },
   "pkg": {
