--- a/.github/workflows/release-pkg.yml
+++ b/.github/workflows/release-pkg.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]  
-        node-version: [16, 18] 
+        node-version: [18,20] 
 
     steps:
       # 1. Checkout source code
