--- a/.github/workflows/release-pkg.yml
+++ b/.github/workflows/release-pkg.yml
@@ -9,12 +9,17 @@ concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 jobs:
   build-and-publish:
+    name: Release CLI
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         # os: [ubuntu-latest, windows-latest, macos-latest]  
         os: [ubuntu-latest]  
         node-version: [18,20] 
+        
+    permissions:
+      contents: write
+      id-token: write
 
     steps:
       # 1. Checkout source code
