--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://unpkg.com/@changesets/config@3.0.5/schema.json",
-  "changelog": ["@changesets/changelog-github", { "repository": "sandev-team/sylica-dev-cli" }],
+  "changelog": ["@changesets/changelog-github", { "repo": "sandev-team/sylica-dev-cli" }],
   "commit": false,
   "fixed": [],
   "linked": [],
