chore: add permission

--- a/.github/workflows/release-pkg.yml
+++ b/.github/workflows/release-pkg.yml
@@ -19,6 +19,7 @@ permissions:
   repository-projects: write
   security-events: read
   statuses: write
+  id-token: write
 
 jobs:
   build-and-publish:
